# HelloHaskell

./: .travis.yml  HLint.hs  HelloHaskell.cabal
src/Pamil/: List.hs
src/Pamil/List/: Compress.hs  ElementAt.hs  FizzBuzz.hs  Flatten.hs  IsPalindrome.hs  MyButLast.hs  MyLast.hs  MyLength.hs  MyReverse.hs  Pack.hs  Quicksort.hs
test/Pamil/List/: CompressSpec.hs  ElementAtSpec.hs  FizzBuzzSpec.hs  FlattenSpec.hs  IsPalindromeSpec.hs  MyButLastSpec.hs  MyLastSpec.hs  MyLengthSpec.hs  MyReverseSpec.hs  PackSpec.hs  QuicksortSpec.hs
